ch8-health-resource-management/labs/lab01/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: namung08/k8s-labs-todo-backend:v2.0
          ports:
            - containerPort: 8080
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 20
            tcpSocket:
              port: 8080
          readinessProbe:
            httpGet:
              path: /api/todos
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
