ch8-health-resource-management/labs/lab01/database.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-statefulset-database
spec:
  serviceName: "todo-headless-service-database"
  replicas: 1
  selector:
    matchLabels:
      app: todo-database
  template:
    metadata:
      labels:
        app: todo-database
    spec:
      containers:
        - name: todo-database
          image: mysql:8.0
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /data/todo
              name: todo-data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: todo-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
